--- a/CEP/BB/doc/bb-implementation/definitions.tex
+++ b/CEP/BB/doc/bb-implementation/definitions.tex
@@ -8,15 +8,14 @@
 \renewcommand{\theStatus}  {Draft}
 \renewcommand{\theRevNR}   {0.1.1}
 \renewcommand{\theScope}   {CEP}
-\renewcommand{\theDocNR}   {LOFAR-ASTRON-DOC-xxx}
-\renewcommand{\theFile}    {ftp://kant.astron.nl/pub/tex/lofar-cls-0.9.6.tgz}
+\renewcommand{\theDocNR}   {LOFAR-ASTRON-MEM-097}
+\renewcommand{\theFile}    {http://dop49.astron.nl/ðaan/BlackBoard/bb-implementation.pdf}
 %
 % Define the title of the document
 %
 
 \renewcommand{\theTitle}
-{the implementation details of a blackboard application framework for
- self calibration in the LOFAR Central Processor} 
+{design considerations for a blackboard application framework}
 
 \renewcommand{\theTAuthor} {D.\ Hoogland}
 %
