--- a/trunk/CEP/BB/doc/bb-implementation/bb-implementation.tex
+++ b/trunk/CEP/BB/doc/bb-implementation/bb-implementation.tex
@@ -50,7 +50,7 @@
       self-calibration-application. An demo application has been made,
       and test-runs have been performed in order to get a feeling of
       what is really needed. Those are described in
-      \hyperlink{bib:LOFAR-ASTRON-MEM-096}{[LOFAR-ASTRON-MEM-096]}.
+      \hyperlink{bib:LOFAR-ASTRON-MEM-096}{[HOO02]}.
 
     \subsection{context}
     \label{subsec:context}\hypertarget{subsec:context}{}
@@ -383,10 +383,10 @@
 
       The data, resulting from an observation will be several TB in
       volume
-      \hyperlink{LOFAR-ASTRON-MEM-035}{[LOFAR-ASTRON-MEM-035]}. To
+      \hyperlink{LOFAR-ASTRON-MEM-035}{[SCH02]}. To
       conveniently handle this it will have to be partitioned. To
       handle part of the data a specialised sub-cluster will be
-      defined. (see \hyperlink{subcluster}{Figure 1}).
+      defined. (see \hyperlink{fig:bb.subcluster}{Figure 1}).
 
       \begin{figure}
         \includegraphics[]{../figures/bb.subcluster.eps}
@@ -669,12 +669,12 @@
   \bibliography{}
   \begin{thebibliography}{WIDELABEL}
 
-    \bibitem[LOFAR-ASTRON-MEM-035]{LOFAR-ASTRON-MEM-035}
+    \bibitem[SCH02]{LOFAR-ASTRON-MEM-035}
       \emph{CEP Requirements Analysis, Architectural Design and
       Description} , Kjeld van der Schaaf, Copyright \copyright{} 2002
       ASTRON. \label{LOFAR-ASTRON-MEM-035}
 
-    \bibitem[LOFAR-ASTRON-MEM-096]{LOFAR-ASTRON-MEM-096}
+    \bibitem[HOO03]{LOFAR-ASTRON-MEM-096}
       \emph{The use of the Blackboard architectural pattern, in the LOFAR Central Processor, for the selfcal control system},
       D.\ Hoogland,
       Copyright \copyright{} 2003 ASTRON.
